# PSU_CAPSTONE_F24

./: .gitmodules  CMakeLists.txt  Kconfig  README.md  nrf9161dk_nrf9161_ns.overlay  prj.conf  sample.yaml
nrf9161dk/: CMakeLists.txt  Kconfig  README.md  prj.conf
nrf9161dk/boards/: nrf9161dk_nrf9161_ns.overlay
nrf9161dk/src/: battery.c  battery.h  coap_onem2m.c  coap_onem2m.h  gnss.c  gnss.h  i2c.c  i2c.h  lte.c  lte.h  main.c  main.h  uart.c  uart.h
src/: dect-nr.c  dect-nr.h  main.c  main.h  mesh-root.c  mesh-root.h  mesh.c  mesh.h  uart.c  uart.h
